# PyPhysX

./: Dockerfile  README.md  kaggle-test.ipynb
.github/workflows/: workflowa.yml
Actions/WorkFlowA/: dockerfile.wf  runner.sh  workflow.sh
Swig/: CMakeLists.txt  RUNNER.sh  SETUP.sh  link.txt  physx.cpp  physx.hpp  setup.ipynb  swigConfigurationFile.i  test.py
